--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
+include:
+  - /apps/auth/docker-compose.yml
+  # path:
+  #   - /apps/auth/docker-compose.yml
 services:
-  postgres:
-    container_name: postgres
+  todo_postgres:
+    container_name: todo_postgres
     image: postgres:latest
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
@@ -10,6 +14,8 @@ services:
       - pg_main:/var/lib/postgresql/data
     ports:
       - '5430:5432'
+    networks:
+      - postgres
     restart: always
 
   pgadmin:
@@ -22,7 +28,12 @@ services:
       - pgadmin:/var/lib/pgadmin
     ports:
       - '5050:80'
+    networks:
+      - postgres
     restart: always
 volumes:
   pg_main:
   pgadmin:
+networks:
+  postgres:
+    driver: bridge
